@@ -1,6 +1,6 @@
-.\"	$NetBSD: bozohttpd.8,v 1.19 2010/05/15 06:48:27 mrg Exp $
+.\"	$NetBSD: bozohttpd.8,v 1.20 2010/06/17 19:43:30 mrg Exp $
 .\"
-.\"	$eterna: bozohttpd.8,v 1.95 2010/05/13 04:17:58 mrg Exp $
+.\"	$eterna: bozohttpd.8,v 1.96 2010/06/17 19:27:32 mrg Exp $
 .\"
 .\" Copyright (c) 1997-2010 Matthew R. Green
 .\" All rights reserved.
@@ -26,8 +26,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd May 22, 2009
-.Dd May 10, 2010
+.Dd June 17, 2010
 .Dt HTTPD 8
 .Os
 .Sh NAME
@@ -459,7 +458,7 @@ The focus has always been simplicity and security, with minimal features
 and regular code audits.
 This manual documents
 .Nm
-version 20100512.
+version 20100617.
 .Sh AUTHORS
 .Nm
 was written by Matthew R. Green
